tests/baselines/reference/instantiateTypeParameter.errors.txt
==== tests/cases/compiler/instantiateTypeParameter.ts (2 errors) ====
    interface Foo<T> {
        var x: T<>;
            ~
!!! instantiateTypeParameter.ts(2,9): error TS1005: ';' expected.
               ~~~
!!! instantiateTypeParameter.ts(2,12): error TS2125: Type 'T' is not generic.
    }